--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "daisyui": "^3.9.3",
+    "embla-carousel-autoplay": "^8.0.0-rc20",
+    "embla-carousel-react": "^8.0.0-rc20",
     "lucide-react": "^0.288.0",
     "next": "13.5.6",
     "next-themes": "^0.2.1",
